<resources>
    <string name="default_web_client_id">373369689147-2pk9pg16um6ifv6aeod0bb27qp3lr39v.apps.googleusercontent.com</string>
    <string name="app_name">VocabHelper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_all_words">All Words</string>
    <string name="tab_categories">Categories</string>


    <!--Splash screen-->
    <string name="splash_skip">Skip</string>
    <string name="splash_vocabulary_learning_tips">Vocabulary Learning Tips</string>
    <string name="splash_you_can_easily_apply_the_tip_provided_by_using_this_app">You can easily apply the tip provided by using this app</string>
    <string name="splash_back">Back</string>
    <string name="splash_next">Next</string>
    <string name="splash_in_vocabhelper_you_can_create_your_personalized_routine_to_stay_productive">In VocabHelper you can create your personalized routine to stay productive</string>
    <string name="splash_create_daily_routine">Create daily routine</string>
    <string name="splash_get_started">GET STARTED</string>
    <string name="splash_you_can_organize_your_daily_tasks_by_adding_your_tasks_into_separate_categories">You can organize your daily tasks by adding your tasks into separate categories</string>
    <string name="splash_organize_your_tasks">Organize your tasks</string>
    <string name="splash_welcome_to_vocabhelper">Welcome to VocabHelper</string>
    <string name="splash_please_login_to_your_account_or_create_new_account_to_continue">Please login to your account or create new account to continue</string>
    <string name="splash_login">LOGIN</string>
    <string name="splash_create_account">CREATE ACCOUNT</string>
    <string name="splash_a_tool_help_you_in_learning_english_vocabulary">A tool help you in learning English vocabulary</string>
    <string name="splash_using_author_s_learning_method">Using author\'s learning method</string>
    <string name="splash_to_learn_a_new_word">To learn a new word:</string>
    <string name="splash_write_down_the_definition">Write down the definition</string>
    <string name="splash_record_your_own_pronunciation">Record your own pronunciation</string>
    <string name="splash_organize_words_into_categories">Organize words into categories</string>
    <string name="splash_lookup_for_synonyms_and_antonyms">Lookup for synonyms and antonyms</string>
    <string name="splash_explore_collocations">Explore collocations</string>
    <string name="splash_and_finally_make_sentence">And finally make sentence</string>
    <string name="splash_also_helps_you_to_focus_with_pomodoro_method">Also helps you to focus with pomodoro method</string>
    <string name="splash_so_what_are_you_waiting_for">So what are you waiting for?</string>

    <!--Login-->
    <string name="login_login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_enter_your_email">Enter your email</string>
    <string name="login_password">Password</string>
    <string name="login_and_also_the_password">And also the Password</string>
    <string name="login_or">or</string>
    <string name="login_login_with_google">Login with Google</string>
    <string name="login_don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_register">Register</string>
    <string name="this_feature_is_under_maintenance">This feature is under maintenance!</string>

    <!--Signup-->
    <string name="register_full_name">Full name</string>
    <string name="register_enter_your_full_name">Enter your full name</string>
    <string name="register_email">Email</string>
    <string name="register_enter_your_email">Enter your email</string>
    <string name="register_password">Password</string>
    <string name="register_and_also_the_password">And also the Password</string>
    <string name="register_password_must_be_at_least_8_characters_with_at_least_one_uppercase_letter_one_lowercase_letter_one_number_and_one_special_character">Password must be at least 8 characters with at least one uppercase letter, one lowercase letter, one number, and one special character.</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_and_confirm_it_again">And confirm it again</string>
    <string name="register_already_have_an_account">Already have an account?</string>

    <!--Add words-->
    <string name="addStep1_add_word">Add Word</string>
    <string name="addStep1_word">Word:</string>
    <string name="addStep1_enter_word">Enter word</string>
    <string name="addStep1_phonetic">Phonetic:</string>
    <string name="addStep1_enter_phonetic">Enter phonetic</string>
    <string name="addStep1_next">Next</string>
    <string name="addStep2_add_word">Add Word</string>
    <string name="addStep2_meaning">Meaning:</string>
    <string name="addStep2_enter_meaning">Enter meaning</string>
    <string name="addStep2_synonym">Synonym:</string>
    <string name="addStep2_enter_synonym">Enter synonym</string>
    <string name="addStep2_antonym">Antonym:</string>
    <string name="addStep2_enter_antonym">Enter antonym</string>
    <string name="addStep2_back">Back</string>
    <string name="addStep2_next">Next</string>
    <string name="addstep1_meaning">Meaning:</string>
    <string name="addstep1_add_word_meaning">Add word meaning</string>
    <string name="addstep1_pronunciation">Pronunciation:</string>
    <string name="addstep1_category">Category:</string>
    <string name="addstep3_collocation">Collocation:</string>
    <string name="addstep3enter_collocation">Enter collocation</string>
    <string name="addstep3_example_sentence">Example sentence:</string>
    <string name="addstep3_enter_example_sentence">Enter example sentence</string>

    <!--Home-->
    <string name="home_what_do_you_want_to_do_today">What word do you want to do learn?</string>
    <string name="home_tap_to_add_your_tasks">Tap + to add new words</string>

    <!--Focus-->
    <string name="focus_focus">Focus</string>
    <string name="focus_focus_and_learn_new_words">Focus and learn new words.</string>
    <string name="focus_start_pomodoro">Start Pomodoro</string>
    <string name="focus_give_up">Give up</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>

    <!--Profile-->
    <string name="profile_account">Account</string>
    <string name="profile_change_account_password">Change account password</string>
    <string name="profile_change_account_avatar">Change account avatar</string>
    <string name="profile_feedback">Feedback</string>
    <string name="profile_logout">Logout</string>
    <string name="search_meanings_of_this_word">Meanings of this word:</string>
    <string name="synonym">Synonym:</string>
    <string name="antonyms">Antonyms:</string>
    <string name="example">Example:</string>
    <string name="definition">Definition:</string>
    <string name="look_up_a_word">Look up a word!</string>

    <!--Setting-->
    <string name="setting_settings">Settings</string>
    <string name="setting_change_display_mode">Change Display Mode</string>
    <string name="setting_change_app_language">Change app language</string>
    <string name="setting_set_focus_time">Set focus time</string>
    <string name="setting_remember_password">Remember password</string>
    <string name="set_focus_time">Set focus time:</string>
    <string name="min">min</string>
    <string name="set_long_break">Set long break:</string>
    <string name="set_short_break">Set short break:</string>
    <string name="cancel">Cancel</string>
    <string name="this_requires_a_restart_to_apply_changes_are_you_sure_you_want_to_log_out">This requires a restart to apply changes. Are you sure you want to log out?</string>

    <!--Top bar-->
    <string name="topbar_index">Index</string>

    <!--Bottom bar-->
    <string name="bottombar_home">Home</string>
    <string name="bottombar_search">Search</string>
    <string name="bottombar_focus">Focus</string>
    <string name="bottombar_profile">Profile</string>

    <!--Word detail-->
    <string name="worddetail_meaning">Meaning:</string>
    <string name="worddetail_category">Category:</string>
    <string name="worddetail_synonym">Synonym:</string>
    <string name="worddetail_antonym">Antonym:</string>
    <string name="worddetail_collocation">Collocation:</string>
    <string name="worddetail_example">Example:</string>
    <string name="worddetail_save">Save</string>
    <string name="worddetail_delete">Delete</string>
    <string name="no_audio_available">No audio available!</string>

    <!--Dialog_feedback_reset_email-->
    <string name="dialog_feedback_your_email">Your email</string>
    <string name="dialog_feedback_send_reset_email">Send Reset Email</string>
    <string name="dialog_feedback_cancel">Cancel</string>

    <!--Dialog_not started-->
    <string name="dialog_notstarted_oh_come_on_you_cannot_give_up_even_before_you_start">Oh come on…you cannot give up even before you start -,-</string>
    <string name="dialog_notstarted_stop_rambling_and_get_back_to_work">Stop rambling and get back to work!!!</string>

    <!--Dialog_logout-->
    <string name="dialog_logout_are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="dialog_logout_yes">Yes</string>
    <string name="dialog_logout_no">No</string>

    <!--Dialog_language-->
    <string name="dialog_language_english">English</string>
    <string name="dialog_language_choose_language">Choose language:</string>
    <string name="dialog_language_vietnamese_3"><![CDATA[Vietnamese <3]]></string>
    <string name="dialog_language_japanese">Japanese</string>
    <string name="dialog_language_french">French</string>

    <!--Dialog_giveup-->
    <string name="dialog_giveup_and_you_just_give_up_like_that">And you just give up like that?</string>
    <string name="dialog_giveup_yeah_im_quit">Yeah…Im quit :\'(</string>
    <string name="dialog_giveup_oh_hell_nahh">Oh hell nahh!!</string>

    <!--Dialog_feedback-->
    <string name="dialog_feedback_your_feedback_is_important_to_me_333">Your feedback is important to me :333</string>
    <string name="dialog_feedback_title">Title</string>
    <string name="dialog_feedback_enter_the_title">Enter the title</string>
    <string name="dialog_feedback_feedback">Feedback</string>
    <string name="dialog_feedback_enter_your_feedback">Enter your feedback</string>
    <string name="dialog_feedback_send_feedback">Send Feedback</string>

    <!--Categories-->
    <string-array name="categories_array">
        <item>Friends</item>
        <item>Environment</item>
        <item>Technology</item>
        <item>Health</item>
        <item>Travel</item>
        <item>Food</item>
        <item>Arts</item>
        <item>Business</item>
        <item>Sports</item>
        <item>Other</item>
    </string-array>

    <string name="category_friends">Friends</string>
    <string name="category_environment">Environment</string>
    <string name="category_technology">Technology</string>
    <string name="category_health">Health</string>
    <string name="category_travel">Travel</string>
    <string name="category_food">Food</string>
    <string name="category_arts">Arts</string>
    <string name="category_business">Business</string>
    <string name="category_sports">Sports</string>
    <string name="category_other">Other</string>

</resources>