<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.fragments.SignupFragment"
    android:padding="16dp"
    android:background="@color/theme_primary"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:src="@drawable/button_back"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:fontFamily="@font/lato"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_full_name"
        android:fontFamily="@font/lato"
        android:textColor="@color/text_main"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_inputtext"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_enter_your_full_name"
            android:id="@+id/fullnameET"
            android:textColor="@color/text_main"
            tools:ignore="Autofill,TextFields" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email"
        android:fontFamily="@font/lato"
        android:textColor="@color/text_main"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_inputtext"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_enter_your_email"
            android:id="@+id/emailET"
            android:textColor="@color/text_main"
            tools:ignore="Autofill,TextFields" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        android:fontFamily="@font/lato"
        android:textColor="@color/text_main"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_inputtext"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_and_also_the_password"
            android:id="@+id/passwordET"
            android:inputType="textPassword"
            android:textColor="@color/text_main"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordRegex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password_must_be_at_least_8_characters_with_at_least_one_uppercase_letter_one_lowercase_letter_one_number_and_one_special_character"
        android:fontFamily="@font/lato"
        android:textColor="@color/theme_danger"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_confirm_password"
        android:fontFamily="@font/lato"
        android:textColor="@color/text_main"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_inputtext"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_and_confirm_it_again"
            android:id="@+id/confirmPasswordET"
            android:inputType="textPassword"
            android:textColor="@color/text_main"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_mainbutton"
        android:fontFamily="@font/lato"
        android:text="@string/login_register"
        android:textAlignment="center"
        android:textColor="@color/text_main"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_already_have_an_account"
            android:fontFamily="@font/lato"
            android:textColor="@color/theme_tertiary"
            android:textSize="12sp"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:fontFamily="@font/lato"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:id="@+id/goToLogin"
            android:padding="20dp"/>

    </LinearLayout>

</LinearLayout>